--- a/ParvatiArchana/app/build.gradle
+++ b/ParvatiArchana/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation 'com.google.android.gms:play-services-vision:11.0.2'
     implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.volley:volley:1.2.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
