--- a/ParvatiArchana/app/src/main/AndroidManifest.xml
+++ b/ParvatiArchana/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.parvatiarchana" >
+    package="com.example.parvatiarchana">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -8,8 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- For bar code -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Permission to write to external storage -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- Permission to write to external storage -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -18,7 +17,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ParvatiArchana" >
+        android:theme="@style/Theme.ParvatiArchana">
+        <activity
+            android:name=".inventry.Product_Mangment"
+            android:exported="false" />
         <activity
             android:name=".LinerNestedActivity"
             android:exported="false" />
@@ -48,7 +50,7 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,20 +61,17 @@
             android:name=".sqlite.AddCountryActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar" >
-        </activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
         <activity
             android:name=".sqlite.CountryListActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar" >
-        </activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
         <activity
             android:name=".sqlite.ModifyCountryActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar" >
-        </activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="false"
