--- a/ParvatiArchana/app/src/main/AndroidManifest.xml
+++ b/ParvatiArchana/app/src/main/AndroidManifest.xml
@@ -11,13 +11,21 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- Permission to write to external storage -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ParvatiArchana">
+        android:theme="@style/Theme.ParvatiArchana"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".table.TableMainActivity"
+            android:exported="false" />
         <activity
             android:name=".inventry.Product_Mangment"
             android:exported="false" />
@@ -61,17 +69,17 @@
             android:name=".sqlite.AddCountryActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar" />
         <activity
             android:name=".sqlite.CountryListActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar" />
         <activity
             android:name=".sqlite.ModifyCountryActivity"
             android:exported="false"
             android:label="Add Country"
-            android:theme="@style/Theme.ParvatiArchana.NoActionBar"></activity>
+            android:theme="@style/Theme.ParvatiArchana.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="false"
