--- a/ParvatiArchana/app/build.gradle
+++ b/ParvatiArchana/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
