--- a/kaali/src/main/resources/application.properties
+++ b/kaali/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 #https://www.baeldung.com/spring-boot-h2-database
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.generate-ddl=true
+spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.database=local
+#3spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=local
+#spring.data.mongodb.username=sai
+#spring.data.mongodb.password=Gautam@23
