--- a/kaali/pom.xml
+++ b/kaali/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+                        <groupId>com.twilio.sdk</groupId>
+                        <artifactId>twilio</artifactId>
+                        <version>8.8.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
