--- a/Kaali-Gui/appointment-kaali/angular.json
+++ b/Kaali-Gui/appointment-kaali/angular.json
@@ -89,6 +89,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
