Signed-off-by: singhsiddh <singhsiddh@yahoo.com>

--- a/kaali/src/main/resources/application.properties
+++ b/kaali/src/main/resources/application.properties
@@ -16,3 +16,14 @@ spring.data.mongodb.database=local
 #spring.data.mongodb.database=local
 #spring.data.mongodb.username=sai
 #spring.data.mongodb.password=Gautam@23
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+spring.mail.host=smtp.yahoo.com
+spring.mail.port=465
+spring.mail.username=singabch@yahoo.com
+spring.mail.password=hiyulyd
+#spring.mail.password=G@23
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#https://www.geeksforgeeks.org/spring-boot-sending-email-via-smtp/
