--- a/kaali/pom.xml
+++ b/kaali/pom.xml
@@ -40,7 +40,10 @@
 			<artifactId>mail</artifactId>
 			<version>1.4</version>
 		</dependency>
-
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
